longhorn/longhorn-IngressRoute-traefik.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-ing-traefik
  namespace: longhorn-system
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`picluster.dz.pzuj.net`) && PathPrefix(`/longhorn`)
      kind: Rule
      services:
        - name: longhorn-int-svc
          port: http
      middlewares:
        - name: longhorn-add-trailing-slash
        - name: longhorn-stripprefix
