longhorn/longhorn-ingress-traefik.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: longhorn-ing-traefik
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: "longhorn.picluster.dz.pzuj.net"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: longhorn-int-svc
            port:
              number: 8000
